--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "multiplayer-game",
-  "version": "1.0.0",
-  "description": "A simple multiplayer game using node.js",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "node",
-    "multiplayer",
-    "game"
-  ],
-  "author": "KineticTactic",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^2.3.0"
-  }
+    "name": "multiplayer-game",
+    "version": "1.0.0",
+    "description": "A simple multiplayer game using node.js",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [
+        "node",
+        "multiplayer",
+        "game"
+    ],
+    "author": "KineticTactic",
+    "license": "MIT",
+    "dependencies": {
+        "express": "^4.17.1",
+        "socket.io": "^2.3.0"
+    }
 }
